# meta-openev

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py  validate.py
server/: Dockerfile  __init__.py  app.py  environment.py
src/: __init__.py  client.py  models.py
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
