[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-openenv"
version = "1.0.0"
description = "An OpenEnv-compatible reinforcement learning environment for Supply Chain Inventory Management."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "Abhiram Pagilla" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "server*", "tasks*"]
