[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supply-chain-openenv"
version = "1.0.0"
description = "An OpenEnv-compatible reinforcement learning environment for Supply Chain Inventory Management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Abhiram Pagilla" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "src", "tasks"]
